src-tauri/build_check3.txt
cargo :     Checking cognivox v0.1.0 
(C:\Users\USER\OneDrive\Desktop\AIproject\src-tauri)
At line:1 char:56
+ ... s\USER\OneDrive\Desktop\AIproject\src-tauri; cargo check *>&1 | Out-S ...
+                                                  ~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpecified: (    Checking co...ject\src-tauri) 
   :String) [], RemoteException
    + FullyQualifiedErrorId : NativeCommandError
 
error[E0277]: the trait bound `ArrayBase<OwnedRepr<f32>, Dim<[usize; 3]>>: 
OwnedTensorArrayData<_>` is not satisfied
   --> src\speaker_id.rs:298:53
    |
298 |     let input_value = ort::value::Value::from_array(input)
    |                       ----------------------------- ^^^^^ the trait 
`OwnedTensorArrayData<_>` is not implemented for `ArrayBase<OwnedRepr<f32>, 
Dim<[usize; 3]>>`
    |                       |
    |                       required by a bound introduced by this call
    |
    = help: the following other types implement trait 
`OwnedTensorArrayData<I>`:
              (D, Box<[T]>)
              (D, Vec<T>)
              ndarray::ArrayBase<ndarray::data_repr::OwnedRepr<T>, D>
note: required by a bound in `ort::value::impl_tensor::create::<impl 
ort::value::Value<TensorValueType<T>>>::from_array`
   --> C:\Users\USER\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\ort-2
.0.0-rc.11\src\value\impl_tensor\create.rs:140:32
    |
140 |     pub fn from_array(input: impl OwnedTensorArrayData<T>) -> 
Result<Tensor<T>> {
    |                                   ^^^^^^^^^^^^^^^^^^^^^^^ required by 
this bound in `ort::value::impl_tensor::create::<impl 
Value<TensorValueType<T>>>::from_array`

For more information about this error, try `rustc --explain E0277`.
error: could not compile `cognivox` (lib) due to 1 previous error

